--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!--  App Theme  -->
     <style name="Theme.MemoryMarkdown" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <!--  SplashScreen Theme  -->
+    <style name="Theme.MemoryMarkdown.SplashScreen" parent="Theme.SplashScreen" />
 </resources>
