--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths>
     <root-path name="root_path" path=""/>
     <external-files-path name="my_files" path="files/"/>
+    <cache-path name="cache_files" path="caches/"/>
 </paths>
